# secot-cli

./: Cargo.toml  DEVELOPMENT_NOTES.md  README.md  config.json
src/: error.rs  lib.rs  main.rs  models.rs
src/command/: broker_test.rs  cmd_handler.rs  mod.rs  scan_networks.rs  scan_ports.rs
src/config/: mod.rs
src/mqtt/: broker.rs  broker_utils.rs  client.rs  mod.rs  mqtt.rs
src/output/: formatter.rs  table.rs
src/serial/: mod.rs  serial_commands.rs  serial_connection.rs
